Add page screenshot.

--- a/user-guide.html
+++ b/user-guide.html
@@ -140,7 +140,7 @@
                 <div class="row center-block header-text-center index">4</div>
                 <div class="row center-block header-text-center hint">Save</div>
                 <div class="one-intro center-block">
-                    <div class="glyphicon glyphicon-download text-center center-block"></div>
+                    <div class="glyphicon glyphicon-save text-center center-block"></div>
                     <div class="text-center intro-detail">XXXXXXX</div>
 
                 </div>
