Add prototype images.

--- a/data-file-upload.html
+++ b/data-file-upload.html
@@ -94,7 +94,7 @@
                     </div>
                     <div class="col-md-2 header-text-center">
                         <a href="#">
-                            <div id="bi-exit" class="header-text-center bi bi-box-arrow-right"></div>
+                            <div id="bi-exit" class="header-text-center bi bi-box-arrow-right" style="::before font-weight:1000!important"></div>
                         </a>
 
                     </div>
