--- a/user-guide.html
+++ b/user-guide.html
@@ -5,6 +5,8 @@
     <title>User guide</title>
 
     <link rel="stylesheet" href="static/bootstrap-3.4.1/css/bootstrap.min.css">
+    <link rel="stylesheet" href="static/icons/font/bootstrap-icons.min.css" crossorigin="anonymous">
+
     <link rel="stylesheet" href="static/css/user-guide.css">
     <script type="text/javascript" src="static/js/jquery-3.5.1.min.js"></script>
     <script type="text/javascript" src="static/bootstrap-3.4.1/js/bootstrap.min.js"></script>
@@ -15,19 +17,19 @@
     <!--页头-->
     <div id="page-header" class="row  header-text-center">
         <div class="col-md-1 header-text-center hidden-sm hidden-xs">
-            <div id="logo" class="glyphicon glyphicon-blackboard col-md-offset-11 header-text-center"></div>
+            <span id="logo" class=" col-md-offset-11 header-text-center bi bi-robot"></span>
         </div>
         <div class="col-md-7 hidden-sm hidden-xs">
             <div id="proj-name-zh" class="left-text-center font-weight-bolder">智能数据分析助手</div>
             <div id="proj-name-en" class="left-text-center">Data Wizard</div>
         </div>
-        <div class="col-md-4 col-sm-12 col-xs-12">
+        <div id="header-right-part" class="col-md-4 col-sm-12 col-xs-12">
             <div class="row">
                 <div id="header-right" class="header-text-center">
                     <div class="col-md-5 col-md-offset-1 header-text-center need-border">
 
-                        <div class="row header-text-center">
-                        <span id="usr-logo" class="glyphicon glyphicon-user">
+                        <div class="row header-text-center ">
+                        <span id="usr-logo" class="glyphicon glyphicon-user">&nbsp;
                         </span>
                             <a href="">
                                 超级管理员
@@ -43,6 +45,7 @@
                             </a>
                         </div>
                     </div>
+
                     <div class="col-md-2 header-text-center">
                         <a href="#">
                             <div id="bi-exit" class="header-text-center bi bi-box-arrow-right"></div>
@@ -61,11 +64,42 @@
     <!--导航栏-->
     <div class="row nav-row">
         <ul id="up-nav" class="nav navbar-default nav-justified">
-            <li role="presentation" class="active"><a class="glyphicon glyphicon-home" href="#">&nbspHome</a></li>
-            <li role="presentation"><a class="glyphicon glyphicon glyphicon-tasks" href="#">&nbspProject</a></li>
-            <li role="presentation"><a class="glyphicon glyphicon-upload" href="data-file-upload.html">&nbspData File Upload</a></li>
-            <li role="presentation"><a class="glyphicon glyphicon-console" href="#">&nbspCommand Console</a></li>
-            <li role="presentation"><a class="glyphicon glyphicon-save" href="#">&nbspSave</a></li>
+            <li role="presentation" class="active "><a class="glyphicon glyphicon-home" href="user-guide.html">
+                <span>&nbsp</span>Home</a></li>
+           <li id="project-li" role="presentation" class="dropdown">
+                        <a href="#" class="dropdown-toggle glyphicon glyphicon-tasks" data-toggle="dropdown">
+                            <span>&nbsp</span>Project<span>&nbsp</span>
+                            <b class="caret"></b>
+                        </a>
+                        <ul class="dropdown-menu second-menu">
+                            <li id="new-project" class="text-center">
+                                <a href="#" class="glyphicon glyphicon-plus">Create</a>
+                            </li>
+                            <li class="divider" ></li>
+                            <li id="open-project" class="text-center">
+                                <a href="#" class="glyphicon glyphicon-folder-open">Open</a>
+                            </li>
+                        </ul>
+                    </li>
+            <li role="presentation"><a class="glyphicon glyphicon-upload" href="data-file-upload.html"><span>&nbsp</span>Data File
+                Upload</a></li>
+            <li role="presentation"><a class="glyphicon glyphicon-console" href="console.html"><span>&nbsp</span>Command Console</a></li>
+            <li role="presentation" class="dropdown">
+                        <a href="#" class="dropdown-toggle glyphicon glyphicon-tasks" data-toggle="dropdown">
+                            <span>&nbsp</span>download<span>&nbsp</span>
+                            <b class="caret"></b>
+                        </a>
+                        <ul class="dropdown-menu second-menu">
+                            <li id="download-code" class="text-center">
+                                <a href="#" class="glyphicon glyphicon-console">下载代码</a>
+                            </li>
+                            <li class="divider" ></li>
+                            <li id="download-plt" class="text-center">
+                                <a href="#" class="glyphicon glyphicon-picture">下载图片</a>
+                            </li>
+                        </ul>
+                    </li>
+
         </ul>
     </div>
     <!--历史项目-->
@@ -115,7 +149,7 @@
                 <div class="row center-block header-text-center hint">Upload data file</div>
                 <div class="one-intro center-block">
                     <div class="glyphicon glyphicon-upload text-center center-block"></div>
-                    <div class="text-center intro-detail">Upload the data </br>current support csv format</div>
+                    <div class="text-center intro-detail">Upload the data <br>current support csv format</div>
 
                 </div>
             </div>
@@ -128,7 +162,9 @@
                 <div class="row center-block header-text-center hint">Command Console</div>
                 <div class="one-intro center-block">
                     <div class="glyphicon glyphicon-console text-center center-block"></div>
-                    <div class="text-center intro-detail">In the command console, you can easily analyze the data by only communicating with engine</div>
+                    <div class="text-center intro-detail">In the command console, you can easily analyze the data by
+                        only communicating with engine
+                    </div>
 
                 </div>
             </div>
