--- a/navbar.html
+++ b/navbar.html
@@ -1,31 +1,24 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="zh-CN">
 <head>
     <meta charset="UTF-8">
-    <title>Command Console</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>NavBar</title>
+
+    <link rel="stylesheet" href="static/bootstrap-3.4.1/css/bootstrap.min.css">
+    <link rel="stylesheet" href="static/icons/font/bootstrap-icons.min.css" crossorigin="anonymous">
 
     <link rel="stylesheet" href="static/css/navbar.css">
-    <link rel="stylesheet" href="static/css/console.css">
-    <link rel="stylesheet" href="static/bootstrap-3.4.1/css/bootstrap.css">
-        <link rel="stylesheet" href="static/icons/font/bootstrap-icons.min.css" crossorigin="anonymous">
-
-        <script type="text/javascript" src="static/js/jquery-3.5.1.min.js"></script>
-        <script type="text/javascript" src="static/js/popper-2.11.8.js"></script>
-        <script type="text/javascript" src="static/bootstrap-3.4.1/js/bootstrap.js"></script>
-
-<!--    <link rel="stylesheet" href="https://cdn.staticfile.org/twitter-bootstrap/3.3.7/css/bootstrap.min.css">-->
-<!--    <script src="https://cdn.staticfile.org/jquery/2.1.1/jquery.min.js"></script>-->
-<!--    <script src="https://cdn.staticfile.org/twitter-bootstrap/3.3.7/js/bootstrap.min.js"></script>-->
+    <script type="text/javascript" src="static/js/jquery-3.5.1.min.js"></script>
+    <script type="text/javascript" src="static/bootstrap-3.4.1/js/bootstrap.min.js"></script>
 
 
 </head>
 <body>
 <div class="container-fluid">
-        <!--页头-->
+    <!--页头-->
     <div id="page-header" class="row  ver-hor-text-center">
         <div class="col-md-1 ver-hor-text-center hidden-sm hidden-xs">
-            <span id="logo" class=" col-md-offset-11 ver-hor-text-center bi bi-gpu-card"></span>
+            <span id="logo" class=" col-md-offset-11 ver-hor-text-center bi bi-robot"></span>
         </div>
         <div class="col-md-7 hidden-sm hidden-xs">
             <div id="proj-name-zh" class="left-text-center font-weight-bolder">智能数据分析助手</div>
@@ -84,7 +77,7 @@
         <div class="collapse navbar-collapse" id="navbar-collapse">
             <ul id="up-nav" class="nav navbar-default nav-justified">
 
-                <li role="presentation" class="vertical-center">
+                <li role="presentation" class="active vertical-center">
                     <a class="ver-hor-text-center" href="user-guide.html">
                         <div class="under"><span class="glyphicon glyphicon-home">&nbsp</span>Home</div>
                     </a></li>
@@ -100,11 +93,11 @@
 
                     <ul class="dropdown-menu second-menu">
                         <li id="createProject" class="text-center">
-                            <a href="#" class="glyphicon glyphicon-plus">New...</a>
+                            <a href="#" class="glyphicon glyphicon-plus">Create</a>
                         </li>
                         <li class="divider"></li>
                         <li id="openProject" class="text-center">
-                            <a href="#" class="glyphicon glyphicon-folder-open">Open...</a>
+                            <a href="#" class="glyphicon glyphicon-folder-open">Open</a>
                         </li>
                     </ul>
 
@@ -119,7 +112,7 @@
                             Upload
                         </div>
                     </a></li>
-                <li role="presentation" class="active"><a href="console.html">
+                <li role="presentation"><a class="" href="console.html">
                     <div class="under">
                         <span class="glyphicon glyphicon-console">&nbsp</span>Command Console
                     </div>
@@ -155,23 +148,22 @@
         </div>
     </div>
 
-
     <!-- 新建项目模态框 -->
     <div class="modal fade" id="createProjectModal" tabindex="-1" role="dialog">
         <div class="modal-dialog">
             <div class="modal-content">
                 <div class="modal-header">
                     <button type="button" class="close" data-dismiss="modal">&times;</button>
-                    <h4 class="modal-title">New Project</h4>
+                    <h4 class="modal-title">新建项目</h4>
                 </div>
                 <div class="modal-body">
                     <form id="createProjectForm">
                         <div class="form-group">
-                            <label for="projectName">Name</label>
+                            <label for="projectName">项目名</label>
                             <input type="text" class="form-control btn-sm" id="projectName">
                         </div>
                         <div class="form-group">
-                            <label for="create-proj-text">Location</label>
+                            <label for="create-proj-text">选择本地文件夹地址</label>
                             <!--                            <input type="file" class="form-control btn-sm" id="folderInput" webkitdirectory>-->
                             <div class="form-group">
                                 <input type="text" class="form-control" id="create-proj-text" readonly>
@@ -181,8 +173,8 @@
                     </form>
                 </div>
                 <div class="modal-footer">
-                    <button type="button" class="btn btn-default" data-dismiss="modal">Cancel</button>
-                    <button type="button" class="btn btn-primary" id="createProjectSubmit">Create</button>
+                    <button type="button" class="btn btn-default" data-dismiss="modal">取消</button>
+                    <button type="button" class="btn btn-primary" id="createProjectSubmit">创建项目</button>
                 </div>
             </div>
         </div>
@@ -194,12 +186,12 @@
             <div class="modal-content">
                 <div class="modal-header">
                     <button type="button" class="close" data-dismiss="modal">&times;</button>
-                    <h4 class="modal-title">Open Project</h4>
+                    <h4 class="modal-title">打开项目</h4>
                 </div>
                 <div class="modal-body">
                     <form id="openProjectForm">
                         <div class="form-group">
-                            <label for="open-proj-text">Location</label>
+                            <label for="open-proj-text">选择本地文件夹</label>
                             <!--                            <input type="file" class="form-control" id="folderInputOpen" webkitdirectory>-->
                             <div class="form-group">
                                 <input type="text" class="form-control" id="open-proj-text" readonly>
@@ -209,77 +201,14 @@
                     </form>
                 </div>
                 <div class="modal-footer">
-                    <button type="button" class="btn btn-default" data-dismiss="modal">Cancel</button>
-                    <button type="button" class="btn btn-primary" id="openProjectSubmit">Open</button>
+                    <button type="button" class="btn btn-default" data-dismiss="modal">取消</button>
+                    <button type="button" class="btn btn-primary" id="openProjectSubmit">打开项目</button>
                 </div>
             </div>
         </div>
     </div>
 
-    <!--项目位置-->
-    <div id="pwd" class="row vertical-center">
-        C:> Users> DataWizard_user> ProjectA
-    </div>
-    <!--上半部分-->
-    <div id="top-half" class="row">
-        <!--prompt文本框-->
-        <div class="col-md-6">
-            <i class="bi bi-arrow-right-circle-fill pull-right" id="submitButton" title="submit"></i>
-                <i class="bi bi-repeat pull-right" id="clearButton" title="clear"></i>
-
-
-            <form id="prompt-form" role="form">
-                <div class="form-group">
-                    <label for="prompt-input">Command</label>
-
-
-                    <textarea id="prompt-input" class="form-control pre-scrollable" rows="10"
-                              placeholder="在这里输入指令..."></textarea>
-                </div>
-            </form>
-        </div>
-
-
-        <!--python代码-->
-        <div class="col-md-6">
-            <label for="codeEditor">Python</label>
-            <textarea class="form-control pre-scrollable no-wrap-textarea" rows="6" id="codeEditor">
-# python code
-colors = ['red', 'blue', 'green', 'orange', 'purple', 'pink', 'brown', 'gray', 'olive', 'cyan', 'purple', 'pink', 'brown', 'gray', 'olive', 'cyan']
-plt.bar(df['country'], df['gdp'], color=colors)
-plt.xticks(rotation=90)
-plt.xlabel('Country')
-plt.ylabel('GDP')
-plt.title('GDP by Country')
-plt.show()
-
-
-        </textarea>
-        </div>
-    </div>
-    <!--            下半部分-->
-    <!--结果输出-->
-    <div id="bottom-half" class="row half-screen-height">
-        <div class="col-md-12">
-            <label for="displayBox" class="center">Output</label>
-            <div class="pre-scrollable well" id="displayBox">
-                <p>
-                    这里可以显示后端传入的文字。用户可以复制这里的文字，并使用滚动条浏览。
-                    这里可以显示后端传入的文字。用户可以复制这里的文字，并使用滚动条浏览。
-                    这里可以显示后端传入的文字。用户可以复制这里的文字，并使用滚动条浏览。这里可以显示后端传入的文字。用户可以复制这里的文字，并使用滚动条浏览。
-                    这里可以显示后端传入的文字。用户可以复制这里的文字，并使用滚动条浏览。
-
-                </p>
-                <img src="static/images/logo.jpg" alt="示例图片" class="img-responsive">
-            </div>
-
-        </div>
-    </div>
-    <!--上部导航栏-->
-    <!--test-->
 </div>
 <script type="text/javascript" src="static/js/navbar.js"></script>
-<script type="text/javascript" src="static/js/console.js"></script>
 </body>
-
 </html>
