--- a/user-guide.html
+++ b/user-guide.html
@@ -6,8 +6,9 @@
 
     <link rel="stylesheet" href="static/bootstrap-3.4.1/css/bootstrap.min.css">
     <link rel="stylesheet" href="static/icons/font/bootstrap-icons.min.css" crossorigin="anonymous">
-
+    <link rel="stylesheet" href="static/css/navbar.css">
     <link rel="stylesheet" href="static/css/user-guide.css">
+
     <script type="text/javascript" src="static/js/jquery-3.5.1.min.js"></script>
     <script type="text/javascript" src="static/bootstrap-3.4.1/js/bootstrap.min.js"></script>
 
@@ -15,9 +16,9 @@
 <body>
 <div class="container-fluid">
     <!--页头-->
-    <div id="page-header" class="row  header-text-center">
-        <div class="col-md-1 header-text-center hidden-sm hidden-xs">
-            <span id="logo" class=" col-md-offset-11 header-text-center bi bi-robot"></span>
+    <div id="page-header" class="row  ver-hor-text-center">
+        <div class="col-md-1 ver-hor-text-center hidden-sm hidden-xs">
+            <span id="logo" class=" col-md-offset-11 ver-hor-text-center bi bi-gpu-card"></span>
         </div>
         <div class="col-md-7 hidden-sm hidden-xs">
             <div id="proj-name-zh" class="left-text-center font-weight-bolder">智能数据分析助手</div>
@@ -25,30 +26,30 @@
         </div>
         <div id="header-right-part" class="col-md-4 col-sm-12 col-xs-12">
             <div class="row">
-                <div id="header-right" class="header-text-center">
-                    <div class="col-md-5 col-md-offset-1 header-text-center need-border">
+                <div id="header-right" class="ver-hor-text-center">
+                    <div class="col-md-5 col-md-offset-1 ver-hor-text-center need-border">
 
-                        <div class="row header-text-center ">
-                        <span id="usr-logo" class="glyphicon glyphicon-user">&nbsp;
+                        <div class="row ver-hor-text-center ">
+                        <span id="usr-logo" class="bi bi-person-circle">&nbsp&nbsp&nbsp
                         </span>
                             <a href="">
-                                超级管理员
+                                User
                             </a>
 
                         </div>
                     </div>
                     <!--                <div class="col-md-1 header-text-center vertical-sep">|</div>-->
-                    <div class="col-md-4 header-text-center need-border">
-                        <div class="row header-text-center">
+                    <div class="col-md-4 ver-hor-text-center need-border">
+                        <div class="row ver-hor-text-center">
                             <a href="#">
-                                文档中心
+                                Document
                             </a>
                         </div>
                     </div>
 
-                    <div class="col-md-2 header-text-center">
+                    <div class="col-md-2 ver-hor-text-center">
                         <a href="#">
-                            <div id="bi-exit" class="header-text-center bi bi-box-arrow-right"></div>
+                            <div id="bi-exit" class="ver-hor-text-center bi bi-box-arrow-right"></div>
                         </a>
 
                     </div>
@@ -61,65 +62,170 @@
 
         <!--            </div>-->
     </div>
+
     <!--导航栏-->
     <div class="row nav-row">
-        <ul id="up-nav" class="nav navbar-default nav-justified">
-            <li role="presentation" class="active "><a class="glyphicon glyphicon-home" href="user-guide.html">
-                <span>&nbsp</span>Home</a></li>
-           <li id="project-li" role="presentation" class="dropdown">
-                        <a href="#" class="dropdown-toggle glyphicon glyphicon-tasks" data-toggle="dropdown">
-                            <span>&nbsp</span>Project<span>&nbsp</span>
-                            <b class="caret"></b>
-                        </a>
-                        <ul class="dropdown-menu second-menu">
-                            <li id="new-project" class="text-center">
-                                <a href="#" class="glyphicon glyphicon-plus">Create</a>
-                            </li>
-                            <li class="divider" ></li>
-                            <li id="open-project" class="text-center">
-                                <a href="#" class="glyphicon glyphicon-folder-open">Open</a>
-                            </li>
-                        </ul>
-                    </li>
-            <li role="presentation"><a class="glyphicon glyphicon-upload" href="data-file-upload.html"><span>&nbsp</span>Data File
-                Upload</a></li>
-            <li role="presentation"><a class="glyphicon glyphicon-console" href="console.html"><span>&nbsp</span>Command Console</a></li>
-            <li role="presentation" class="dropdown">
-                        <a href="#" class="dropdown-toggle glyphicon glyphicon-tasks" data-toggle="dropdown">
-                            <span>&nbsp</span>download<span>&nbsp</span>
-                            <b class="caret"></b>
-                        </a>
-                        <ul class="dropdown-menu second-menu">
-                            <li id="download-code" class="text-center">
-                                <a href="#" class="glyphicon glyphicon-console">下载代码</a>
-                            </li>
-                            <li class="divider" ></li>
-                            <li id="download-plt" class="text-center">
-                                <a href="#" class="glyphicon glyphicon-picture">下载图片</a>
-                            </li>
-                        </ul>
-                    </li>
+        <div class="navbar-header">
+            <button type="button" class="navbar-toggle btn btn-default" data-toggle="collapse"
+                    data-target="#navbar-collapse" id="nav-button">
+                <span class="sr-only">切换导航</span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+            </button>
+        </div>
+        <div class="collapse navbar-collapse" id="navbar-collapse">
+            <ul id="up-nav" class="nav navbar-default nav-justified">
 
-        </ul>
+                <li role="presentation" class="active vertical-center">
+                    <a class="ver-hor-text-center" href="user-guide.html">
+                        <div class="under"><span class="glyphicon glyphicon-home">&nbsp</span>Home</div>
+                    </a></li>
+
+                <li id="project-li" role="presentation" class="dropdown">
+
+                    <a href="#" class="dropdown-toggle" data-toggle="dropdown">
+                        <div class="under">
+                            <span class="bi bi-folder-fill">&nbsp</span>Project<span>&nbsp</span>
+                            <b class="caret"></b>
+                        </div>
+                    </a>
+
+                    <ul class="dropdown-menu second-menu">
+                        <li id="createProject" class="text-center">
+                            <a href="#" class="glyphicon glyphicon-plus">New...</a>
+                        </li>
+                        <li class="divider"></li>
+                        <li id="openProject" class="text-center">
+                            <a href="#" class="glyphicon glyphicon-folder-open">Open...</a>
+                        </li>
+                    </ul>
+
+
+                </li>
+                <li role="presentation">
+                    <a class=""
+                       href="data-file-upload.html">
+                        <div class="under">
+
+                            <span class="glyphicon glyphicon-tasks">&nbsp</span>
+                            Data File Upload
+                        </div>
+                    </a></li>
+                <li role="presentation"><a class="" href="console.html">
+                    <div class="under">
+                        <span class="glyphicon glyphicon-console">&nbsp</span>Command Console
+                    </div>
+                </a></li>
+                <li role="presentation" class="dropdown">
+
+                    <a href="#" class="dropdown-toggle" data-toggle="dropdown">
+                        <div class="under">
+                            <span class="glyphicon glyphicon-save">&nbsp</span>Save<span>&nbsp</span>
+                            <b class="caret"></b>
+                        </div>
+                    </a>
+                    <ul class="dropdown-menu second-menu">
+                        <li class="text-center download-img">
+                            <a href="#" class="">plot1.png</a>
+                        </li>
+                        <li class="divider"></li>
+                        <li class="text-center">
+                            <a href="#" class="">plot2.png</a>
+                        </li>
+                        <li class="divider"></li>
+                        <li class="text-center">
+                            <a href="#" class="">document.docx</a>
+                        </li>
+                        <li class="divider"></li>
+                        <li id="download-plt" class="text-center">
+                            <a href="#" class="">result.csv</a>
+                        </li>
+                    </ul>
+                </li>
+
+            </ul>
+        </div>
     </div>
+
+    <!-- 新建项目模态框 -->
+    <div class="modal fade" id="createProjectModal" tabindex="-1" role="dialog">
+        <div class="modal-dialog">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <button type="button" class="close" data-dismiss="modal">&times;</button>
+                    <h4 class="modal-title">New Project</h4>
+                </div>
+                <div class="modal-body">
+                    <form id="createProjectForm">
+                        <div class="form-group">
+                            <label for="projectName">Name</label>
+                            <input type="text" class="form-control btn-sm" id="projectName">
+                        </div>
+                        <div class="form-group">
+                            <label for="create-proj-text">Location</label>
+                            <!--                            <input type="file" class="form-control btn-sm" id="folderInput" webkitdirectory>-->
+                            <div class="form-group">
+                                <input type="text" class="form-control" id="create-proj-text" readonly>
+                            </div>
+                            <input type="file" id="create-proj-file" style="display: none" webkitdirectory>
+                        </div>
+                    </form>
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-default" data-dismiss="modal">Cancel</button>
+                    <button type="button" class="btn btn-primary" id="createProjectSubmit">Create</button>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <!-- 打开项目模态框 -->
+    <div class="modal fade" id="openProjectModal" tabindex="-1" role="dialog">
+        <div class="modal-dialog">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <button type="button" class="close" data-dismiss="modal">&times;</button>
+                    <h4 class="modal-title">Open Project</h4>
+                </div>
+                <div class="modal-body">
+                    <form id="openProjectForm">
+                        <div class="form-group">
+                            <label for="open-proj-text">Location</label>
+                            <!--                            <input type="file" class="form-control" id="folderInputOpen" webkitdirectory>-->
+                            <div class="form-group">
+                                <input type="text" class="form-control" id="open-proj-text" readonly>
+                            </div>
+                            <input type="file" id="open-proj-file" style="display: none" webkitdirectory>
+                        </div>
+                    </form>
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-default" data-dismiss="modal">Cancel</button>
+                    <button type="button" class="btn btn-primary" id="openProjectSubmit">Open</button>
+                </div>
+            </div>
+        </div>
+    </div>
+
     <!--历史项目-->
     <div id="history-row" class="row">
         <div class="col-md-12">
             <h1>History</h1>
         </div>
 
-        <div class="col-md-4">
-            <div class="one-proj header-text-center center-block">
+        <div class="col-md-4 col-sm-6 col-xs-12">
+            <div class="one-proj ver-hor-text-center center-block">
                 <a href="#">Project A</a>
             </div>
         </div>
-        <div class="col-md-4">
-            <div class="one-proj header-text-center center-block">
+        <div class="col-md-4 col-sm-6 col-xs-12">
+            <div class="one-proj ver-hor-text-center center-block">
                 <a href="#">Project B</a>
             </div>
         </div>
-        <div class="col-md-4">
-            <div class="one-proj header-text-center center-block">
+        <div class="col-md-4 hidden-sm hidden-xs">
+            <div class="one-proj ver-hor-text-center center-block">
                 <a href="#">Project C</a>
             </div>
         </div>
@@ -132,8 +238,8 @@
         </div>
         <div class="col-md-3 col-sm-6 col-xs-12">
             <div class="one-guide center-block">
-                <div class="row center-block header-text-center index">1</div>
-                <div class="row center-block header-text-center hint">Create Project</div>
+                <div class="row center-block ver-hor-text-center index">1</div>
+                <div class="row center-block ver-hor-text-center hint">Create Project</div>
                 <div class="one-intro center-block">
                     <div class="glyphicon glyphicon-tasks text-center center-block"></div>
                     <div class="text-center intro-detail">Please create your own project</div>
@@ -145,11 +251,13 @@
         </div>
         <div class="col-md-3 col-sm-6 col-xs-12">
             <div class="one-guide center-block">
-                <div class="row center-block header-text-center index">2</div>
-                <div class="row center-block header-text-center hint">Upload data file</div>
+                <div class="row center-block ver-hor-text-center index">2</div>
+                <div class="row center-block ver-hor-text-center hint">Upload data file</div>
                 <div class="one-intro center-block">
                     <div class="glyphicon glyphicon-upload text-center center-block"></div>
-                    <div class="text-center intro-detail">Upload the data <br>current support csv format</div>
+                    <div class="text-center intro-detail">
+                        Upload the data <br>current support csv format
+                    </div>
 
                 </div>
             </div>
@@ -158,8 +266,8 @@
         </div>
         <div class="col-md-3 col-sm-6 col-xs-12">
             <div class="one-guide center-block">
-                <div class="row center-block header-text-center index">3</div>
-                <div class="row center-block header-text-center hint">Command Console</div>
+                <div class="row center-block ver-hor-text-center index">3</div>
+                <div class="row center-block ver-hor-text-center hint">Command Console</div>
                 <div class="one-intro center-block">
                     <div class="glyphicon glyphicon-console text-center center-block"></div>
                     <div class="text-center intro-detail">In the command console, you can easily analyze the data by
@@ -173,11 +281,13 @@
         </div>
         <div class="col-md-3 col-sm-6 col-xs-12">
             <div class="one-guide center-block">
-                <div class="row center-block header-text-center index">4</div>
-                <div class="row center-block header-text-center hint">Save</div>
+                <div class="row center-block ver-hor-text-center index">4</div>
+                <div class="row center-block ver-hor-text-center hint">Save</div>
                 <div class="one-intro center-block">
                     <div class="glyphicon glyphicon-save text-center center-block"></div>
-                    <div class="text-center intro-detail">XXXXXXX</div>
+                    <div class="text-center intro-detail">
+                        You can download the outputs in appropriate format
+                    </div>
 
                 </div>
             </div>
@@ -188,5 +298,6 @@
 
     </div>
 </div>
+<script type="text/javascript" src="static/js/navbar.js"></script>
 </body>
 </html>
