add data preview

--- a/console.html
+++ b/console.html
@@ -243,9 +243,7 @@
         <!--python代码-->
         <div class="col-md-6">
             <label for="codeEditor">Python</label>
-            <textarea class="form-control pre-scrollable no-wrap-textarea" rows="6" id="codeEditor">
-
-        </textarea>
+            <textarea class="form-control pre-scrollable no-wrap-textarea" rows="6" id="codeEditor"></textarea>
         </div>
     </div>
     <!--            下半部分-->
