--- a/console_demo1.html
+++ b/console_demo1.html
@@ -237,8 +237,7 @@
 1. 进行数据清洗。
 2. 对数据进行描述性分析,充分考虑当前数据的类型特点。本次描述性分析的主要目的包括：
     a. 描述数据的分布情况：包括直方图、箱线图、密度图等，用于了解数据的分布情况和异常值情况。
-    b. 描述数据的相关性：包括相关系数、散点图等，用于了解不同变量之间的相关性。
-                    </textarea>
+    b. 描述数据的相关性：包括相关系数、散点图等，用于了解不同变量之间的相关性。</textarea>
                 </div>
             </form>
         </div>
