--- a/console_demo2.html
+++ b/console_demo2.html
@@ -245,8 +245,7 @@
     数值型变量：皮尔森相关
     分类变量：卡方检验
 
-2. 请提供相应的图表和解释来支持这些洞察。
-                    </textarea>
+2. 请提供相应的图表和解释来支持这些洞察。</textarea>
                 </div>
             </form>
         </div>
