--- a/user-guide.html
+++ b/user-guide.html
@@ -216,12 +216,12 @@
 
         <div class="col-md-4 col-sm-6 col-xs-12">
             <div class="one-proj ver-hor-text-center center-block">
-                <a href="#">Project A</a>
+                <a href="console_demo1.html">Project A</a>
             </div>
         </div>
         <div class="col-md-4 col-sm-6 col-xs-12">
             <div class="one-proj ver-hor-text-center center-block">
-                <a href="#">Project B</a>
+                <a href="console_demo2.html">Project B</a>
             </div>
         </div>
         <div class="col-md-4 hidden-sm hidden-xs">
@@ -241,7 +241,7 @@
                 <div class="row center-block ver-hor-text-center index">1</div>
                 <div class="row center-block ver-hor-text-center hint">Create Project</div>
                 <div class="one-intro center-block">
-                    <div class="glyphicon glyphicon-tasks text-center center-block"></div>
+                    <div class="bi bi-folder-fill text-center center-block"></div>
                     <div class="text-center intro-detail">Please create your own project</div>
 
                 </div>
@@ -254,7 +254,7 @@
                 <div class="row center-block ver-hor-text-center index">2</div>
                 <div class="row center-block ver-hor-text-center hint">Upload data file</div>
                 <div class="one-intro center-block">
-                    <div class="glyphicon glyphicon-upload text-center center-block"></div>
+                    <div class="glyphicon glyphicon-tasks text-center center-block"></div>
                     <div class="text-center intro-detail">
                         Upload the data <br>current support csv format
                     </div>
