change some links

--- a/console.html
+++ b/console.html
@@ -218,7 +218,7 @@
 
     <!--项目位置-->
     <div id="pwd" class="row vertical-center">
-        C:> Users> DataWizard_user> ProjectA
+        C:> Users> DataWizard_user> Project Demo
     </div>
     <!--上半部分-->
     <div id="top-half" class="row">
