--- a/console_demo1.html
+++ b/console_demo1.html
@@ -140,14 +140,14 @@
                         <li class="text-center">
                             <a href="#" class="">plot2.png</a>
                         </li>
-                        <li class="divider"></li>
-                        <li class="text-center">
-                            <a href="#" class="">document.docx</a>
-                        </li>
-                        <li class="divider"></li>
-                        <li id="download-plt" class="text-center">
-                            <a href="#" class="">result.csv</a>
-                        </li>
+<!--                        <li class="divider"></li>-->
+<!--                        <li class="text-center">-->
+<!--                            <a href="#" class="">document.docx</a>-->
+<!--                        </li>-->
+<!--                        <li class="divider"></li>-->
+<!--                        <li id="download-plt" class="text-center">-->
+<!--                            <a href="#" class="">result.csv</a>-->
+<!--                        </li>-->
                     </ul>
                 </li>
 
