--- a/console_demo2.html
+++ b/console_demo2.html
@@ -133,21 +133,21 @@
                         </div>
                     </a>
                     <ul class="dropdown-menu second-menu">
-                        <li class="text-center download-img">
-                            <a href="#" class="">plot1.png</a>
-                        </li>
-                        <li class="divider"></li>
-                        <li class="text-center">
-                            <a href="#" class="">plot2.png</a>
-                        </li>
-                        <li class="divider"></li>
+<!--                        <li class="text-center download-img">-->
+<!--                            <a href="#" class="">plot1.png</a>-->
+<!--                        </li>-->
+<!--                        <li class="divider"></li>-->
+<!--                        <li class="text-center">-->
+<!--                            <a href="#" class="">plot2.png</a>-->
+<!--                        </li>-->
+<!--                        <li class="divider"></li>-->
                         <li class="text-center">
                             <a href="#" class="">document.docx</a>
                         </li>
-                        <li class="divider"></li>
-                        <li id="download-plt" class="text-center">
-                            <a href="#" class="">result.csv</a>
-                        </li>
+<!--                        <li class="divider"></li>-->
+<!--                        <li id="download-plt" class="text-center">-->
+<!--                            <a href="#" class="">result.csv</a>-->
+<!--                        </li>-->
                     </ul>
                 </li>
 
@@ -218,7 +218,7 @@
 
     <!--项目位置-->
     <div id="pwd" class="row vertical-center">
-        C:> Users> DataWizard_user> ProjectA
+        C:> Users> DataWizard_user> ProjectB
     </div>
     <!--上半部分-->
     <div id="top-half" class="row">
