change data preview

--- a/data-file-upload.html
+++ b/data-file-upload.html
@@ -263,7 +263,7 @@
 
     <!--上传文件-->
     <div class="row input-row">
-        <input id="input-data-file" type="file" class="file file-loading" allowedFileExtensions="xlsx, txt,csv">
+        <input id="input-data-file" type="file" class="file file-loading">
     </div>
 
     <!--    <input type="file" id="file-input" accept=".csv,.xlsx">-->
