--- a/user-guide.html
+++ b/user-guide.html
@@ -226,7 +226,7 @@
         </div>
         <div class="col-md-4 hidden-sm hidden-xs">
             <div class="one-proj ver-hor-text-center center-block">
-                <a href="console.html">Project C</a>
+                <a href="console_demo3.html">Project C</a>
             </div>
         </div>
 
